<resources>
    <string name="app_name">Notes</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="background">Background</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="add">New note</string>
    <string name="voice_message">Add voice note</string>

    <string name="calender">Calender</string>
    <string name="positive">Positive Quotes</string>
    <string name="favourite_list">Favourite List</string>
    <string name="delete_all">Delete All</string>
    <string name="exit">Exit</string>

    <string name="favourite">Add to favourite</string>
    <string name="lock">Lock to taskbar</string>
    <string name="secret">Secret</string>

    <string name="voice_note">voice Note</string>
    <string name="hint_title">Title...</string>
    <string name="delete">Delete</string>
    <string name="are_you_want_delete_this_note">Are you want delete this note ?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="note">Note</string>
    <string name="password">Password</string>
    <string name="ok">Ok</string>
    <string name="add_title">Add title</string>

    <!--        <string name="quote_banner_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="color_dialog_banner_id">ca-app-pub-7003859395474560/9623239116</string>
    <string name="delete_dialog_banner_id">ca-app-pub-7003859395474560/4982174573</string>
    <string name="add_note_banner_id">ca-app-pub-7003859395474560/4962186792</string>
    <string name="quote_banner_id">ca-app-pub-7003859395474560/9526217956</string>
    <string name="trash_can">Trash Can</string>
    <string name="add_your_password">Add your password</string>
    <string name="edit_password">Edit Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>


</resources>
