<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/note_option_background"
        android:title="@string/background"
        android:tooltipText="Background"
        android:icon="@drawable/ic_color_lens_black_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/note_option_save"
        android:title="@string/save"
        android:tooltipText="Save"
        android:icon="@drawable/ic_save_black_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/note_option_delete"
        android:title="@string/delete"
        android:tooltipText="Delete"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="always"/>
</menu>