<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:id="@+id/home_container_voice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/home_voiceMessage_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="casual"
                android:gravity="center"
                android:hint="@string/voice_note"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/home_voiceMessage_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="casual"
                android:gravity="center"
                android:hint="@string/voice_note"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColorHint="@color/gray_darkf"
                android:textSize="15sp" />

            <SeekBar
                android:id="@+id/home_voiceMessage_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@color/gray2f"
                android:progressBackgroundTint="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_dark_background"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/home_voiceMessage_play"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_play"
                    android:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/home_voiceMessage_pause"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_stop"
                    android:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/home_voiceMessage_delete"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_delete_black_24dp"
                    android:backgroundTint="@color/white" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/home_container_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView_favorite_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="casual"
                android:gravity="center"
                android:maxLength="10"
                android:padding="5dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/home_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/textView_favorite_date"
                android:orientation="vertical">

            <TextView
                android:id="@+id/textView_favorite_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="start|left"
                android:hint="@string/hint_title"
                android:ellipsize="end"
                android:singleLine="true"
                android:maxWidth="10dp"
                android:paddingHorizontal="5dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/home_add_new_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:fontFamily="casual"
                android:hint="@string/note"
                android:paddingBottom="10dp"
                android:paddingHorizontal="5dp" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>